--- a/package.json
+++ b/package.json
@@ -3,28 +3,33 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.3.2",
-    "@testing-library/user-event": "^7.1.2",
     "antd": "^3.26.6",
     "antd-theme-webpack-plugin": "^1.3.1",
+    "axios": "^0.19.2",
     "customize-cra": "^0.9.1",
+    "firebase": "^7.14.2",
     "i18next": "^19.4.3",
-    "less-loader": "^6.0.0",
+    "less-loader": "^5.0.0",
     "lodash": "^4.17.15",
+    "plop": "^2.6.0",
     "react": "^16.13.1",
     "react-app-rewired": "^2.1.5",
     "react-dom": "^16.13.1",
     "react-i18next": "^11.3.5",
+    "react-redux": "^7.2.0",
     "react-responsive": "^8.0.3",
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
+    "redux": "^4.0.5",
+    "redux-thunk": "^2.3.0",
     "styled-components": "^5.1.0"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
+    "start": "react-app-rewired start",
+    "add-redux": "plop",
+    "build": "react-app-rewired build",
+    "deploy": "npm run build && firebase deploy --project webopromotions",
     "test": "react-scripts test",
     "precommit": "NODE_ENV=production lint-staged",
     "eject": "react-scripts eject"
