--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "antd": "^3.26.6",
+    "@ant-design/compatible": "^1.0.4",
+    "antd": "^4.3.5",
     "antd-theme-webpack-plugin": "^1.3.1",
     "axios": "^0.19.2",
     "customize-cra": "^0.9.1",
