--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "Webo-App",
   "version": "0.1.0",
   "private": true,
+  "publishConfig": {
+    "registry": "https://npm.pkg.github.com/"
+  },
   "dependencies": {
     "@ant-design/compatible": "^1.0.4",
     "antd": "^4.3.5",
